test/link/linkerscript-noexist.out
error: linkerscript-noexist.link(1): Failed to open included linker script "linkerscript-noexist.inc": No such file or directory
Linking failed with 1 error
