test/link/linkerscript-noexist.link
INCLUDE "linkerscript-noexist.inc"
ROM0
	"test"
